security-service-poc/frontend/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend-lbl
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: frontend-lbl
