security-service-poc/frontend/deploy/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/frontend"
    route:
    - destination:
        port:
          number: 8080
        host: frontend-svc
